--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 <head>
     <title>Socket.IO chat</title>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-        var socket = io();
+        $(function () {
+            var socket = io();
+            $('form').submit(function (e) {
+                e.preventDefault(); // prevents page reloading
+                socket.emit('chat message', $('#m').val());
+                $('#m').val('');
+                return false;
+            });
+        });
     </script>
     <style>
         * {
