✨ Add complete basic socket demo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 $('#m').val('');
                 return false;
             });
+            socket.on('chat message', function (msg) {
+                $('#messages').append($('<li>').text(msg));
+            });
         });
     </script>
     <style>
