--- a/host.html
+++ b/host.html
@@ -15,8 +15,7 @@
                 return false;
             });
             socket.on('chat message', function (msg) {
-                // do nothing
-                // $('#messages').append($('<li>').text(msg));
+                $('#messages').append($('<li>').text(msg));
             });
         });
     </script>
