🐛 Fix survey link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <body>
     <nav>
-        <a class="hidden" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+        <a class="hidden" href="https://forms.gle/53fjoePBgyKxAqJV8">
             <button>Take Survey</button>
         </a>
     </nav>
