🐛 Fix obscured messages in ui

--- a/host.html
+++ b/host.html
@@ -79,21 +79,23 @@
 
         form input {
             border: 0;
-            padding: 10px;
-            width: 90%;
+            padding: 2rem;
             margin-right: .5%;
+            width: 90%;
         }
 
         form button {
-            width: 9%;
             background: rgb(130, 224, 255);
             border: none;
+            height: 62px;
             padding: 10px;
+            width: 9%;
         }        
 
         #messages {
             list-style-type: none;
             margin: 0;
+            margin-bottom: 6rem;
             padding: 0;
         }
 
