🐛 #11 UI Oriented for Mobile
Fixed UI for mobile by using media queries to increase font size and fix form button sizing.

--- a/host.html
+++ b/host.html
@@ -110,6 +110,17 @@
         #messages li:nth-child(odd) {
             background: #eee;
         }
+
+        @media only screen and (orientation: portrait) {
+            form input {
+                width: 80%;
+                padding: 1rem;
+                font-size: 1.5rem;
+            }
+            form button {
+                width: 19%;
+            }
+        }
     </style>
 </head>
 
