--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
         #messages li:nth-child(odd) {
             background: #eee;
         }
+
+        @media only screen and (orientation: portrait) {
+            form input {
+                width: 80%;
+                padding: 1rem;
+                font-size: 1.5rem;
+            }
+            form button {
+                width: 19%;
+            }
+        }
     </style>
 </head>
 
