🐛 Fix Font Size for Buttons on Mobile

--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
                 padding: 1rem;
                 font-size: 1.5rem;
             }
+
             form button {
                 width: 19%;
+                font-size: 1.25rem;
             }
         }
     </style>
