--- a/host.html
+++ b/host.html
@@ -119,6 +119,7 @@
             }
             form button {
                 width: 19%;
+                font-size: 1.25rem;
             }
         }
     </style>
