🐛 Fix Media Query to be Correct for Mobile Devices

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             padding: 2rem;
             margin-right: .5%;
             width: 90%;
+            font-size: 1.5rem;
         }
 
         form button {
@@ -77,6 +78,7 @@
             height: 62px;
             padding: 10px;
             width: 9%;
+            font-size: 1.25rem;
         }
 
         #messages {
@@ -93,16 +95,14 @@
             background: #eee;
         }
 
-        @media only screen and (orientation: portrait) {
+        @media only screen and (max-width: 768px) {
             form input {
                 width: 80%;
                 padding: 1rem;
-                font-size: 1.5rem;
             }
 
             form button {
                 width: 19%;
-                font-size: 1.25rem;
             }
         }
     </style>
