--- a/host.html
+++ b/host.html
@@ -86,6 +86,7 @@
             padding: 2rem;
             margin-right: .5%;
             width: 90%;
+            font-size: 1.5rem;
         }
 
         form button {
@@ -94,12 +95,12 @@
             height: 62px;
             padding: 10px;
             width: 9%;
-        }        
+            font-size: 1.25rem;
+        }
 
         #messages {
             list-style-type: none;
             margin: 0;
-            margin-bottom: 6rem;
             padding: 0;
         }
 
@@ -111,15 +112,14 @@
             background: #eee;
         }
 
-        @media only screen and (orientation: portrait) {
+        @media only screen and (max-width: 768px) {
             form input {
                 width: 80%;
                 padding: 1rem;
-                font-size: 1.5rem;
             }
+
             form button {
                 width: 19%;
-                font-size: 1.25rem;
             }
         }
     </style>
