--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
@@ -29,83 +30,6 @@
             })
         });
     </script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font: 1rem Helvetica, Arial;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-around;   
-        }
-
-        nav button {
-            background: #de92ef;
-            font-size: 1rem;
-            margin: 0.5rem;
-            padding: 1rem;
-        }
-
-        nav a.hidden {
-            display: none;
-        }
-
-        form {
-            background: #000;
-            padding: 3px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        form input {
-            border: 0;
-            padding: 2rem;
-            margin-right: .5%;
-            width: 90%;
-            font-size: 1.5rem;
-        }
-
-        form button {
-            background: rgb(130, 224, 255);
-            border: none;
-            height: 62px;
-            padding: 10px;
-            width: 9%;
-            font-size: 1.25rem;
-        }
-
-        #messages {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        #messages li {
-            padding: 5px 10px;
-        }
-
-        #messages li:nth-child(odd) {
-            background: #eee;
-        }
-
-        @media only screen and (max-width: 768px) {
-            form input {
-                width: 80%;
-                padding: 1rem;
-            }
-
-            form button {
-                width: 19%;
-            }
-        }
-    </style>
 </head>
 
 <body>
