--- a/host.html
+++ b/host.html
@@ -21,6 +21,9 @@
             });
             socket.on('chat message', function (msg) {
                 $('#messages').append($('<li>').text(msg));
+                if(document.body.scrollHeight > (window.innerHeight - document.querySelector("form").offsetHeight)) {
+                    document.querySelector("form").style.position = "sticky";
+                }
             });
 
             socket.emit('new game');
